infra/k8s-gcp/client-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meet-sync-client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meet-sync-client
  template:
    metadata:
      labels:
        app: meet-sync-client
    spec:
      containers:
      - name: meet-sync-client
        image: us.gcr.io/meet-sync-438611/meet-sync-client
        resources:
          limits:
            memory: "2048Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: meet-sync-client-srv
spec:
  selector:
    app: meet-sync-client
  ports:
  - name: meet-sync-client
    protocol: TCP
    port: 80
    targetPort: 80
