infra/k8s-gcp/meet-sync-backend-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meet-sync-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meet-sync
  template:
    metadata:
      labels:
        app: meet-sync
    spec:
      containers:
      - name: meet-sync
        image: us.gcr.io/meet-sync-438611/meet-sync-server
        resources:
          limits:
            memory: "2048Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: meet-sync-srv
spec:
  selector:
    app: meet-sync
  ports:
  - name: meet-sync
    protocol: TCP
    port: 3000
    targetPort: 3000
