infra/k8s-gcp/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
  - host: meet-sync.vinayakabhat.in
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/api/?(.*)"
        backend:
          service:
            name: meet-sync-srv
            port: 
              number: 3000
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: meet-sync-client-srv
            port: 
              number: 80
